[workspace]
members = ["cube-collection", "cube-core"] 
resolver = "2" # for wgpu/Bevy

[profile.wasm-release]
# see:
#https://github.com/bevyengine/bevy/blob/main/examples/README.md#optimizing
inherits = "release"
opt-level = 'z'
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
