[package]
edition = "2021"
name = "cc-bevy"
version = "0.1.0"

[dependencies]
# Local workspace
cc-core = {path = "../cc-core"}

# Bery and its plugins
bevy = "0.8.1"
bevy-inspector-egui = "0.12"
bevy_prototype_lyon = "0.6"
iyes_loopless = "0.7"

# Extra utilities
serde = {version = "1.0", features = ["derive"]}
snafu = "0.7"
toml = "0.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
