[package]
edition = "2021"
name = "cube-collection"
version = "0.5.12"

[dependencies]
# Local workspace
cube-core = {path = "../cube-core"}

# Bevy and its plugins
bevy = "0.12"
bevy_prototype_lyon = "0.10"

# Extra utilities
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
snafu = "0.7"
toml = "0.8"
